# ForgeLM

./: .codacy.yaml  .dockerignore  .gitignore  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  config_template.yaml  docker-compose.yaml  pyproject.toml  requirements-eval.txt  requirements-linux.txt  requirements.txt  sonar-project.properties
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  publish.yml  site-deploy.yml  usermanuals-validate.yml
configs/deepspeed/: zero2.json  zero3.json  zero3_offload.json
configs/safety_prompts/: bias_discrimination.jsonl  general_safety.jsonl  harmful_instructions.jsonl  jailbreak_attempts.jsonl  misinformation.jsonl  privacy_pii.jsonl
docs/: architecture-tr.md  architecture.md  compliance_summary.md  configuration-tr.md  configuration.md  data_preparation-tr.md  data_preparation.md  design_wizard_mode.md  distributed_training.md  product_strategy-tr.md  product_strategy.md  roadmap-tr.md  roadmap.md  usage-tr.md  usage.md
docs/design/: blackwell_optimized.md  data_audit_cli_split.md  gdpr_erasure.md  iso27001_soc2_alignment.md  library_api.md  wizard_mode.md
docs/guides/: air_gap_deployment-tr.md  air_gap_deployment.md  alignment-tr.md  alignment.md  cicd_pipeline-tr.md  cicd_pipeline.md  data_audit-tr.md  data_audit.md  enterprise_deployment.md  gdpr_erasure-tr.md  gdpr_erasure.md  getting-started-tr.md  getting-started.md  human_approval_gate-tr.md  human_approval_gate.md  ingestion-tr.md  ingestion.md  iso_soc2_deployer_guide-tr.md  iso_soc2_deployer_guide.md  library_api-tr.md  library_api.md  performance-tr.md  performance.md  pipeline-tr.md  pipeline.md  quickstart-tr.md  quickstart.md  safety_compliance-tr.md  safety_compliance.md  troubleshooting-tr.md  troubleshooting.md
docs/qms/: README-tr.md  README.md  access_control-tr.md  access_control.md  encryption_at_rest-tr.md  encryption_at_rest.md  risk_treatment_plan-tr.md  risk_treatment_plan.md  roles_responsibilities-tr.md  roles_responsibilities.md  sop_change_management-tr.md  sop_change_management.md  sop_data_management-tr.md  sop_data_management.md  sop_incident_response-tr.md  sop_incident_response.md  sop_model_training-tr.md  sop_model_training.md  statement_of_applicability-tr.md  statement_of_applicability.md
docs/reference/: approvals_subcommand-tr.md  approvals_subcommand.md  approve_subcommand-tr.md  approve_subcommand.md  architecture-tr.md  architecture.md  audit_event_catalog-tr.md  audit_event_catalog.md  cache_subcommands-tr.md  cache_subcommands.md  compliance_summary-tr.md  compliance_summary.md  configuration-tr.md  configuration.md  data_ingestion_architecture-tr.md  data_ingestion_architecture.md  data_preparation-tr.md  data_preparation.md  distributed_training-tr.md  distributed_training.md  doctor_subcommand-tr.md  doctor_subcommand.md  iso27001_control_mapping-tr.md  iso27001_control_mapping.md  library_api_reference-tr.md  library_api_reference.md  purge_subcommand-tr.md  purge_subcommand.md  reverse_pii_subcommand-tr.md  reverse_pii_subcommand.md  safety_eval_subcommand-tr.md  safety_eval_subcommand.md  soc2_trust_criteria_mapping-tr.md  soc2_trust_criteria_mapping.md  supply_chain_security-tr.md  supply_chain_security.md  usage-tr.md  usage.md  verify_annex_iv_subcommand-tr.md  verify_annex_iv_subcommand.md  (+4 more)
docs/roadmap/: completed-phases.md  phase-10-5-quickstart.md  phase-10-post-training.md  (+12 more)
forgelm/: __init__.py  _http.py  _pypdf_normalise.py  _script_sanity.py  _strip_pattern.py  _version.py  benchmark.py  chat.py  cli.py  compliance.py  config.py  data.py  data_audit.py  deploy.py  export.py  fit_check.py  grpo_rewards.py  inference.py  ingestion.py  judge.py  merging.py  model.py  model_card.py  quickstart.py  results.py  safety.py  synthetic.py  trainer.py  utils.py  webhook.py  wizard.py
notebooks/: data_curation.ipynb  dpo_alignment.ipynb  galore_memory_optimization.ipynb  grpo_reasoning.ipynb  ingestion_playground.ipynb  kto_binary_feedback.ipynb  multi_dataset.ipynb  post_training_workflow.ipynb  quickstart_sft.ipynb  safety_evaluation.ipynb  synthetic_data_training.ipynb
site/: README.md  compliance.html  contact.html  features.html  guide.html  index.html  privacy.html  quickstart.html  terms.html
tests/: __init__.py  bench_simhash.py  conftest.py  runtime_smoke.py  test_abi_check.py  test_alignment.py  test_approvals_listing.py  test_benchmark.py  test_cache_subcommands.py  test_check_anchor_resolution.py  test_check_bilingual_parity.py  test_check_cli_help_consistency.py  test_check_field_descriptions.py  test_check_module_size.py  test_check_pip_audit.py  test_check_site_claims.py  test_check_usermanual_self_contained.py  test_check_wizard_defaults_sync.py  test_cli.py  test_cli_helpers.py  test_cli_phase10.py  test_cli_quickstart_wiring.py  test_cli_subcommands.py  test_compliance.py  test_config.py  test_config_literal_sweep.py  test_cost_estimation.py  test_data_audit.py  test_data_audit_phase12.py  test_data_audit_workers.py  test_data_edge_cases.py  test_deploy.py  test_distributed.py  test_doctor.py  test_eu_ai_act.py  test_export.py  test_faz27_narrow_exceptions.py  test_fit_check.py  test_galore.py  test_gdpr_erasure.py  (+50 more)
tools/: bench_simhash.py  build_usermanuals.py  check_anchor_resolution.py  check_audit_event_catalog.py  check_bandit.py  check_bilingual_code_blocks.py  check_bilingual_parity.py  check_cli_help_consistency.py  check_doc_numerical_claims.py  check_field_descriptions.py  check_library_api_doc.py  check_module_size.py  check_no_analysis_refs.py  check_no_unguarded_sys_modules_pop.py  check_notebook_pins.py  check_pip_audit.py  check_site_chrome_parity.py  check_site_claims.py  check_usermanual_self_contained.py  check_wizard_defaults_sync.py  check_yaml_snippets.py  generate_sbom.py  generate_wizard_defaults.py  update_site_version.py
(+263 files in other folders)
