[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgelm"
version = "0.4.0"
description = "Config-driven LLM fine-tuning with safety evaluation, EU AI Act compliance, and 6 alignment methods."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ForgeLM Contributors" }]
keywords = [
  "llm", "fine-tuning", "lora", "qlora", "dpo", "rlhf",
  "transformers", "peft", "trl", "safety", "eu-ai-act",
  "deepspeed", "alignment", "machine-learning",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

dependencies = [
  "torch>=2.0.0,<3.0.0",
  "transformers>=4.38.0,<5.0.0",
  "peft>=0.9.0,<1.0.0",
  "datasets>=2.21.0,<5.0.0",
  "accelerate>=0.27.0,<2.0.0",
  "pyyaml>=6.0.1,<7.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "trl>=0.12.0,<2.0.0",
  "tensorboard>=2.15.0,<3.0.0",
  "huggingface_hub>=0.23.2,<1.0.0",
  "requests>=2.31.0,<3.0.0",
]

[project.optional-dependencies]
# QLoRA/bitsandbytes is effectively Linux-only for most setups.
qlora = [
  "bitsandbytes>=0.42.0,<1.0.0; sys_platform == 'linux'",
]

unsloth = [
  "unsloth>=2024.3.0; sys_platform == 'linux'",
]

# Phase 2 benchmarking; keep optional to avoid dependency bloat.
eval = [
  "lm-eval>=0.4.4,<1.0.0",
]

tracking = [
  "wandb>=0.16.0",
]

distributed = [
  "deepspeed>=0.14.0",
]

merging = [
  "mergekit>=0.0.5",
]

# Phase 10: GGUF export via llama-cpp-python's bundled conversion script.
# Linux and macOS only; Windows builds are available but less reliable.
export = [
  "llama-cpp-python>=0.2.90; sys_platform != 'win32'",
]

# Phase 10: rich terminal rendering for the forgelm chat REPL.
# Falls back to plain text output when not installed.
chat = [
  "rich>=13.0.0",
]

dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/cemililik/ForgeLM"
Documentation = "https://github.com/cemililik/ForgeLM/tree/main/docs/guides"
Repository = "https://github.com/cemililik/ForgeLM"
Issues = "https://github.com/cemililik/ForgeLM/issues"
Changelog = "https://github.com/cemililik/ForgeLM/blob/main/CHANGELOG.md"

[project.scripts]
forgelm = "forgelm.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["forgelm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["F", "E9", "W", "B", "I"]
ignore = ["B008", "B905"]

[tool.coverage.run]
source = ["forgelm"]
omit = ["forgelm/wizard.py"]

[tool.coverage.report]
fail_under = 40
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.",
  "raise ImportError",
  "except ImportError",
]
