[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgelm"
version = "0.5.1rc1"
description = "Config-driven LLM fine-tuning with safety evaluation, EU AI Act compliance, 6 alignment methods, and one-command bundled quickstart templates."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ForgeLM Contributors" }]
keywords = [
  "llm", "fine-tuning", "lora", "qlora", "dpo", "rlhf",
  "transformers", "peft", "trl", "safety", "eu-ai-act",
  "deepspeed", "alignment", "machine-learning",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

dependencies = [
  "torch>=2.0.0,<3.0.0",
  "transformers>=4.38.0,<5.0.0",
  "peft>=0.9.0,<1.0.0",
  "datasets>=2.21.0,<5.0.0",
  "accelerate>=0.27.0,<2.0.0",
  "pyyaml>=6.0.1,<7.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "trl>=0.12.0,<2.0.0",
  "tensorboard>=2.15.0,<3.0.0",
  "huggingface_hub>=0.23.2,<1.0.0",
  "requests>=2.31.0,<3.0.0",
]

[project.optional-dependencies]
# QLoRA/bitsandbytes is effectively Linux-only for most setups.
qlora = [
  "bitsandbytes>=0.42.0,<1.0.0; sys_platform == 'linux'",
]

unsloth = [
  "unsloth>=2024.3.0; sys_platform == 'linux'",
]

# Phase 2 benchmarking; keep optional to avoid dependency bloat.
eval = [
  "lm-eval>=0.4.4,<1.0.0",
]

tracking = [
  "wandb>=0.16.0",
]

distributed = [
  "deepspeed>=0.14.0",
]

merging = [
  "mergekit>=0.0.5",
]

# Phase 10: GGUF export via llama-cpp-python's bundled convert_hf_to_gguf.py.
# Produces f16 and q8_0 GGUF directly. K-quants (q4_k_m etc.) require a
# separate llama-quantize step; see docs/guides/export.md for the full flow.
# Linux and macOS only; Windows builds are available but less reliable.
export = [
  "llama-cpp-python>=0.2.90; sys_platform != 'win32'",
]

# Phase 11: document ingestion — PDF/DOCX/EPUB/TXT → SFT-ready JSONL.
# pypdf is pure-Python (cross-platform); ebooklib + beautifulsoup4 parse
# EPUB containers; langdetect powers the audit's top-3 language stat.
# Phase 11.5: xxhash is an optional non-cryptographic 64-bit hash that
# materially speeds up the simhash backend; we fall back to BLAKE2b when
# it is not present so a bare install still works.
# OCR is intentionally out of scope (handle externally with Tesseract).
ingestion = [
  "pypdf>=4.0.0,<6.0.0",
  "python-docx>=1.0.0,<2.0.0",
  "ebooklib>=0.18,<1.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "langdetect>=1.0.9,<2.0.0",
  "xxhash>=3.0.0,<4.0.0",
]

# Phase 12: optional MinHash LSH near-duplicate detector for >50K-row corpora.
# Default audit path stays simhash + LSH banding; this extra unlocks
# `forgelm audit --dedup-method minhash --jaccard-threshold 0.85` for
# operators auditing larger datasets where MinHash's recall/precision
# trade-off is the industry standard (NeMo Curator, Dolma, RedPajama).
ingestion-scale = [
  "datasketch>=1.6.0,<2.0.0",
]

# Phase 12: optional code/credential leakage scanner for SFT corpora.
# detect-secrets is the de-facto standard; without it ForgeLM falls back
# to a regex-only set covering ~10 common patterns (AWS, GitHub, Slack,
# OpenAI, Google, JWT, OpenSSH/PGP private-key headers).
ingestion-secrets = [
  "detect-secrets>=1.5.0,<2.0.0",
]

# Phase 12.5: optional Presidio ML-NER PII detector. Adds the
# unstructured-identifier categories (person / organization / location)
# that the regex detector inherently misses. Heavyweight install
# (≈ 50 MB spaCy model on first analyzer build), so opt-in only — the
# regex set already covers the GDPR-mandated structured identifiers
# (email, phone, IBAN, credit card, national IDs).
ingestion-pii-ml = [
  "presidio-analyzer>=2.2.0,<3.0.0",
]

# Phase 10: rich terminal rendering for the forgelm chat REPL.
# Falls back to plain text output when not installed.
chat = [
  "rich>=13.0.0",
]

dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/cemililik/ForgeLM"
Documentation = "https://github.com/cemililik/ForgeLM/tree/main/docs/guides"
Repository = "https://github.com/cemililik/ForgeLM"
Issues = "https://github.com/cemililik/ForgeLM/issues"
Changelog = "https://github.com/cemililik/ForgeLM/blob/main/CHANGELOG.md"

[project.scripts]
forgelm = "forgelm.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["forgelm*"]

# Bundle quickstart template assets (config.yaml, data.jsonl, README.md) into
# the wheel so `forgelm quickstart` works after a `pip install` rather than
# only from a source checkout.
[tool.setuptools.package-data]
"forgelm.templates" = [
  "*.md",
  "*/*.yaml",
  "*/*.jsonl",
  "*/*.md",
]

[tool.pytest.ini_options]
addopts = "--cov=forgelm --cov-report=term-missing --cov-fail-under=40"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["F", "E9", "W", "B", "I"]
ignore = ["B008", "B905"]

# Bandit static-analysis config (consumed by Codacy + standalone bandit).
# - B101 (assert_used) is disabled for tests/ because pytest requires asserts.
# - tests/ is excluded from the broader scan; we still scan the package itself.
[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101"]

[tool.coverage.run]
source = ["forgelm"]
omit = []

[tool.coverage.report]
fail_under = 40
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.",
  "raise ImportError",
  "except ImportError",
]
